feat: update spcecify with new Guid on